[gd_scene load_steps=3 format=3 uid="uid://chl37jn5e0qul"]

[ext_resource type="Script" uid="uid://2inv1hxgtumw" path="res://scripts/Background.gd" id="1_274mx"]
[ext_resource type="Texture2D" uid="uid://bu2o4v420w7sm" path="res://assets/sprites/nubes.png" id="2_nou1y"]

[node name="Background" type="Node2D"]
script = ExtResource("1_274mx")

[node name="Sky" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Sky1" type="ColorRect" parent="Sky"]
layout_mode = 2
offset_top = -2.0
offset_right = 797.0
offset_bottom = 283.0
color = Color(0.0941176, 0.380392, 1, 1)

[node name="Cloud1" type="Sprite2D" parent="Sky"]
position = Vector2(405, 197)
scale = Vector2(0.399414, 0.348145)
texture = ExtResource("2_nou1y")

[node name="Ground" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 200.0
offset_bottom = 200.0

[node name="Ground1" type="ColorRect" parent="Ground"]
layout_mode = 2
offset_top = -60.0
offset_right = 1021.0
offset_bottom = 534.0
scale = Vector2(0.78229, 0.769923)

[node name="speadline1" type="ColorRect" parent="Ground"]
layout_mode = 0
offset_left = -1.0
offset_top = -58.0
offset_right = 798.0
offset_bottom = -18.0
color = Color(0.964742, 0.964742, 0.964742, 1)

[node name="speadline2" type="ColorRect" parent="Ground"]
layout_mode = 0
offset_top = 138.0
offset_right = 799.0
offset_bottom = 178.0
color = Color(0.964742, 0.964742, 0.964742, 1)

[node name="speadline3" type="ColorRect" parent="Ground"]
layout_mode = 0
offset_top = 325.0
offset_right = 799.0
offset_bottom = 365.0
color = Color(0.964742, 0.964742, 0.964742, 1)
